# fastAdvan

./: .env  Dockerfile  Pipfile  docker-compose.yml  pyproject.toml
