[tool.poetry]
name = "fastapi advanced"
version = "0.1.0"
description = "Follow through Udemy course"
authors = ["Roberto Shimizu <rshimizubr@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.101.1"
uvicorn = "^0.23.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
